# ckafprod

./: .gitignore  .gitmodules  houses.json  meson.build  meson_options.txt
src/: house_worker.c  house_worker.h  json_parsing.c  json_parsing.h  main.c  modifiers.c  utils.c  utils.h  victoria_metrics.c  victoria_metrics.h
src/sim/: house_worker.c  house_worker.h  simulation.c  simulation.h  subscriptions.h  timeutils.c  timeutils.h
